--- a/scoreTable/index.html
+++ b/scoreTable/index.html
@@ -15,7 +15,7 @@
         }
 
         h1 {
-            color: #c00;
+            color: black;
             font-family: sans-serif;
             font-size: 2em;
             margin-bottom: 0;
@@ -64,7 +64,7 @@
 
 <body>
     <main>
-        <h1>Top England Goal Scorers</h1>
+        <h1>Top England Goal Scorers of 2020</h1>
 
         <table class="zigzag">
             <thead>
